add style and html

--- a/style/style.css
+++ b/style/style.css
@@ -14,15 +14,7 @@ img {
     width: 400px;
 }
 
-.definition, .about {
+.definition {
     width: 400px;
     text-align: justify;
-}
-
-.about {
-
-}
-
-.top-facts {
-
 }
